--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "graphql-yoga": "^1.18.0"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "@types/node": "^12.0.10",
+    "nodemon": "^1.19.1",
+    "ts-node": "^8.3.0",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.5.2"
   },
   "scripts": {
-    "dev": "nodemon --exec babel-node src/server.ts"
+    "dev": "cd src && nodemon --exec babel-node src/server.ts"
   }
 }
