--- a/package.json
+++ b/package.json
@@ -9,17 +9,33 @@
     "@babel/core": "^7.4.5",
     "@babel/node": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "bcrypt": "^3.0.6",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
-    "graphql-yoga": "^1.18.0"
+    "graphql-yoga": "^1.18.0",
+    "helmet": "^3.18.0",
+    "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
+    "merge-graphql-schemas": "^1.5.8",
+    "morgan": "^1.9.1",
+    "typeorm": "^0.2.18"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.5",
+    "@types/helmet": "^0.0.43",
+    "@types/jsonwebtoken": "^8.3.2",
+    "@types/mailgun-js": "^0.16.4",
+    "@types/morgan": "^1.7.35",
     "@types/node": "^12.0.10",
+    "@types/twilio": "^0.0.10",
+    "gql-merge": "^0.0.6",
+    "graphql-to-typescript": "^0.1.2",
     "nodemon": "^1.19.1",
     "ts-node": "^8.3.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.5.2"
   },
   "scripts": {
-    "dev": "cd src && nodemon --exec babel-node src/server.ts"
+    "dev": " nodemon --exec ts-node src/index.ts"
   }
 }
