--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "@babel/node": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "bcrypt": "^3.0.6",
+    "class-validator": "^0.9.1",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
+    "graphql-tools": "^4.0.5",
     "graphql-yoga": "^1.18.0",
     "helmet": "^3.18.0",
     "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
     "merge-graphql-schemas": "^1.5.8",
     "morgan": "^1.9.1",
+    "pg": "^7.11.0",
     "typeorm": "^0.2.18"
   },
   "devDependencies": {
@@ -28,6 +31,7 @@
     "@types/morgan": "^1.7.35",
     "@types/node": "^12.0.10",
     "@types/twilio": "^0.0.10",
+    "babel-runtime": "^6.26.0",
     "gql-merge": "^0.0.6",
     "graphql-to-typescript": "^0.1.2",
     "nodemon": "^1.19.1",
@@ -36,6 +40,9 @@
     "typescript": "^3.5.2"
   },
   "scripts": {
-    "dev": " nodemon --exec ts-node src/index.ts"
+    "predev": "yarn run types",
+    "dev": " nodemon --exec ts-node src/index.ts",
+    "pretypes": "gql-merge --out-file ./src/schema.graphql ./src/api/**/*.graphql",
+    "types": "graphql-to-typescript ./src/schema.graphql ./src/types/graph.d.ts"
   }
 }
