--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,8 @@
         "noUnusedLocals": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
     },
     "exclude": [
         "node_modules",
