--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "merge-graphql-schemas": "^1.5.8",
     "morgan": "^1.9.1",
     "pg": "^7.11.0",
+    "twilio": "^3.33.0",
     "typeorm": "^0.2.18"
   },
   "devDependencies": {
