--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "merge-graphql-schemas": "^1.5.8",
     "morgan": "^1.9.1",
     "pg": "^7.11.0",
-    "twilio": "^3.33.0",
-    "typeorm": "^0.2.18"
+    "twilio": "^3.33.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.5",
@@ -41,9 +40,7 @@
     "typescript": "^3.5.2"
   },
   "scripts": {
-    "predev": "yarn run types",
-    "dev": " nodemon --exec ts-node src/index.ts",
-    "pretypes": "gql-merge --out-file ./src/schema.graphql ./src/api/**/*.graphql",
-    "types": "graphql-to-typescript ./src/schema.graphql ./src/types/graph.d.ts"
+    "deploy": "prisma deploy",
+    "dev": " nodemon --exec ts-node src/index.ts"
   }
 }
