--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "merge-graphql-schemas": "^1.5.8",
     "morgan": "^1.9.1",
     "pg": "^7.11.0",
+    "prisma-client-lib": "^1.34.0",
     "twilio": "^3.33.0"
   },
   "devDependencies": {
@@ -41,6 +42,8 @@
   },
   "scripts": {
     "deploy": "prisma deploy",
+    "generate": "prisma generate",
+    "prisma": "yarn run deploy && yarn run generate",
     "dev": " nodemon --exec ts-node src/index.ts"
   }
 }
