--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/core": "^7.4.5",
     "@babel/node": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "@types/nodemailer": "^6.2.0",
     "bcrypt": "^3.0.6",
     "class-validator": "^0.9.1",
     "cors": "^2.8.5",
@@ -20,6 +21,8 @@
     "mailgun-js": "^0.22.0",
     "merge-graphql-schemas": "^1.5.8",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.2.1",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pg": "^7.11.0",
     "prisma-client-lib": "^1.34.0",
     "ts-node": "^8.3.0",
