--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "morgan": "^1.9.1",
     "nodemailer": "^6.2.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^7.11.0",
     "prisma-client-lib": "^1.34.0",
     "ts-node": "^8.3.0",
@@ -35,6 +37,7 @@
     "@types/mailgun-js": "^0.16.4",
     "@types/morgan": "^1.7.35",
     "@types/node": "^12.0.10",
+    "@types/passport": "^1.0.0",
     "@types/twilio": "^0.0.10",
     "babel-runtime": "^6.26.0",
     "gql-merge": "^0.0.6",
